      [All]
      - Fix a bug that causes a crash when trying to be clever with certain user provided yt-dlp options.

  Version 4.4.0(March 3rd, 2024)
      [Windows]
     - Fix a bug that caused Media Downloader to not show progress report when file names contained invalid
       json character.
      [All]
     - Add a boolean config only option named  "DeleteFilesOnCanceledDownload" to delete temporary files
        when download is cancelled.
     - Add a file size colum in "media options" table to easily show media file sizes.
     - Now buildable with Qt6. Pass "-DBUILD_WITH_QT6=TRUE" option to cmake to build for Qt6.

  Version 4.5.0(April 1st, 2024)
      [All]
     - Support internal downloading and updating svtplay.
     - "Show media Options" menu now has a context menu with a list of video players you can use for
        streaming a media instead of downloading it.
     - Its now possible to select random entries in batch and playlist downloader tabs and batch download
      only those selected.

     Version 4.6.0(May 3rd, 2024)
     [Windows]
     - Update bundled ffmpeg to version 7. Unistall first Media Downloader before updating to this version
       because some ffmpeg files are named differently causing older files to not be removed.
      [All]
     - Add config only for now options to show desktop notification when a download is complete. To get a
       desktop notification when a download is complete, add option
       "DesktopNotifyOnDownloadComplete=true" to the config file. To get a desktop notification when all
       downloads complete, add option "DesktopNotifyOnAllDownloadComplete" to the config file.
    - Add support for "--playlist-reverse" yt-dlp option. Media Downloader need to simulate yt-dlp playlist options
      because it manages the playlist itsef.

     Version 4.7.0(Unreleased)
         [All]
    - Add Arabic translations.